# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.425 2014/11/23 20:51:04 jer Exp $

  23 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.07.15.ebuild,
  -youtube-dl-2014.11.20.ebuild:
  Old.

  23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org>
  youtube-dl-2014.11.02.1.ebuild:
  ppc/ppc64 stable wrt bug #528208

*youtube-dl-2014.11.21.1 (22 Nov 2014)

  22 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.16.ebuild,
  +youtube-dl-2014.11.21.1.ebuild:
  Version bump.

*youtube-dl-2014.11.20 (20 Nov 2014)

  20 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.15.ebuild,
  +youtube-dl-2014.11.20.ebuild:
  Version bump.

  18 Nov 2014; Mikle Kolyada <zlogene@gentoo.org>
  youtube-dl-2014.11.02.1.ebuild:
  x86 stable wrt bug #528208

*youtube-dl-2014.11.16 (17 Nov 2014)

  17 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.14.ebuild,
  +youtube-dl-2014.11.16.ebuild:
  Version bump.

*youtube-dl-2014.11.15 (15 Nov 2014)

  15 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.13.ebuild,
  +youtube-dl-2014.11.15.ebuild:
  Version bump.

*youtube-dl-2014.11.14 (14 Nov 2014)

  14 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.12.1.ebuild,
  +youtube-dl-2014.11.14.ebuild:
  Version bump.

*youtube-dl-2014.11.13 (13 Nov 2014)

  13 Nov 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.11.13.ebuild,
  -youtube-dl-2014.11.09.ebuild, -youtube-dl-2014.11.12.ebuild:
  Version bump.

*youtube-dl-2014.11.12.1 (12 Nov 2014)

  12 Nov 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.11.12.1.ebuild:
  Version bump.

*youtube-dl-2014.11.12 (12 Nov 2014)

  12 Nov 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.11.04.ebuild,
  +youtube-dl-2014.11.12.ebuild:
  Version bump.

  10 Nov 2014; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2014.11.02.1.ebuild: