@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST youtube-dl-2014.11.02.1.tar.gz 1123292 SHA256 2e4ee5cc168eb56f778beec48809aa18068c22f8bbaa1911f5b69cf51edb609e SHA512 0a21d216c36642a079e837440d05338970abd30352564a41267ddb33ff4afd866a28aa678c7186b2a0dd4a11e8ec1e36b55bdf1307b3f23b9f2d3422d8ab9fbd WHIRLPOOL 6bbd185c60371ef553899a2838950fcefa849c76b8ec70d18106e38f9be3ec0bc28c799bd3de3d4ad6a0956699ed6613706b7b4205fcddef1f0ec4bc7c9772a7
 DIST youtube-dl-2014.11.21.1.tar.gz 1143218 SHA256 f2ec80d33b9452df30088d6ebed6b451bf987a88d2d1cf8ce61a424c24eab767 SHA512 a8ddefca9b927ab9f9e46d2d9526cde1378842317eeb985ccc38fea7a91fe6f23bb83dd976f275839d35d9b934035a478dcc84c1cd22db3cdd26d8d38334bf78 WHIRLPOOL 820769812d03e5eb154ce39c81f3b3ec4e35062fb15311b06f4ff9a44489cf7751ce563eeb7fbc0fa1a9df457c964299779e35fbf5f70548719e3d2ec6d393e5
+DIST youtube-dl-2014.11.23.1.tar.gz 1145964 SHA256 ebdc15e688ac787c14d3a9da18b70333166e1c50b9beed0d58b7f42b6fcb58d4 SHA512 1c8b5f1a2ffba423878a88ec24231d3ff21a23340660603c1bdcf1ee48c71ba70685a350c9f49b51c613c11163861cc6084767ac6acacf53780fe425bf801412 WHIRLPOOL 150dfb22197458274541ce18352ef9cca40af1891d44689c3638b641e749559c03c0f6e8056275c8d4ff01a62f915e74e7e64a0812c85c17e567b1f160b44538
 EBUILD youtube-dl-2014.11.02.1.ebuild 1676 SHA256 449b4c12ce7411918b9445754c045eee59ab4ece97a4b8af47692489c4453b99 SHA512 9046ba338981fb05f089bfd58311bbb036d3427499cda43cfd20082dff44f02489b8722275fc40eebe8b2cc6112bba5cae65104fb5f62e3bf07f207ab203db39 WHIRLPOOL e51fedd0b6d9f9f782eb8529b5e90fe6418464e4d13b80696c91128bf4c4538eef7c66e7b1b06af5e39eacd74ff675a49f5ea70cb6dc77dee3e6aa51d3a1a1dd
 EBUILD youtube-dl-2014.11.21.1.ebuild 1682 SHA256 07c28c8b1eb2901288d8daa08dad92cf73e7a968cdb85ab0f4b850e87fc8e8e1 SHA512 ccc0811f739462d6eaafcc2259f9e6721ef59989311c76f7df5247c76359f6a5950ade4e898a221472e4f15d93034b416f4655eba2bcf87df9c7d5fb13bf3845 WHIRLPOOL c05991bdd0ad8145bd26c18b09dd8d2fa95efeec64b3987eb6f3f1c914fc32163eb384345155e87597d829329dc73c73acb494d347cdaf40a5622396b51521b1
-MISC ChangeLog 64262 SHA256 dea571f2fbb9f25d2c2b95fe2202bdd2169f42091292f61395c2c4e62d26870e SHA512 43e9c433b781880e30bcefe5ffaf84006e1943cdafe4f7f43c65ae4c41ecf89245ecf9dd489c848a5455cb7761d7501ffcf72fa5a6d3e4e3c32b71ef62a22692 WHIRLPOOL 6cdb1a9d5df333147bb4ec473704a07ba0423ec81ac752f200853c92fc8abd398152063509ae5591bd53c285d2f5f81e87444fbffc55b5bd16b1eb5dfa5200d1
+EBUILD youtube-dl-2014.11.23.1.ebuild 1682 SHA256 2cd4ee711209a93d435089b1ceb62991cb59d81e2e2cd051b19c35b2ccc2a156 SHA512 bdf08becf9192b50833c94d964c00e2a263138c5636e8f054edbb0ee8d5cb79b54d62fbeac26c8414ef6545dde665325fe0393667b858ae408d72bc15ad59bd2 WHIRLPOOL 4708feb91efd574d7c00e73572c783e9e467c0959f49a05c9380e776a440eae2f04e0ca1c2799abcf52f18efea21ddccf7874898476b0e415fd9a611b175c90a
+MISC ChangeLog 64399 SHA256 d7a1565f5efc050f4648f5f6550dfc77a5b5a6b85309de405516ecec91807798 SHA512 26c83e8bcba70f0abe1e27fa95cb0265afb7fd9dd683798e061ae1ff902ade69ec8686acd2f382709ed43c68e72c0259bd1a409998a16f82d35f9dc0b20bf489 WHIRLPOOL 3d870855a3405165601f315eb794f46005c5a0286315d3d520fa033cbd1ff6e952c2306feff0dd2cd4f90d7fa201c68cdc0ae66c0d90776b116c2fa6d4db5d5d
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRySLkACgkQVWmRsqeSphPstwCfWSTwnRmzaB5KVtr1INakiBGr
-iHMAnji6kD/BWjBU+bOyHbSk2Z2mn6Kv
-=dqwE
+iEYEAREIAAYFAlRyXPcACgkQVWmRsqeSphNq/gCeIUONfoaX6bB9k5cY8vdaSGKP
+ywMAoIEm5ehBjN23H++VMZDbTfrmQwDx
+=RZsK
 -----END PGP SIGNATURE-----
